tests/invalidprograms/semantic/assignment_2.tds
Program {
	Int f = 0;
	
	Int x = f + 1;

	void main() {

	}
}

